# stm32-blackpill

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
examples/: blink.rs  button_led.rs  fade_led.rs  usb_check.rs  usb_ethernet.rs
examples/web/: index.html  led.html
src/: main.rs
